--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@daypilot/daypilot-lite-react": "^3.19.0",
+    "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-table": "^8.10.7",
     "app-router": "^0.0.8",
     "axios": "^1.6.2",
@@ -20,7 +21,8 @@
     "react-bootstrap": "^2.9.1",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18",
-    "react-phone-number-input": "^3.3.7"
+    "react-phone-number-input": "^3.3.7",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
