--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@daypilot/daypilot-lite-react": "^3.19.0",
+    "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-table": "^8.10.7",
     "app-router": "^0.0.8",
@@ -21,8 +22,11 @@
     "react-bootstrap": "^2.9.1",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
     "react-phone-number-input": "^3.3.7",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "react-toastify": "^9.1.3",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
